[package]
name = "adif"
version = "0.1.0"
edition = "2024"
authors = ["Sidney Cammeresi <sac@cheesecake.org>"]
license = "BSD-3-Clause"
readme = "README.md"
description = "Parsing of Amateur Data Interchange Format (ADIF) files"
repository = "https://github.com/cammeresi/adif.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
chrono = "0.4.42"
futures = "0.3"
indexmap = "2"
rust_decimal = "1.39"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt"] }
tokio-test = "0.4"
