[package]
name = "difa"
version = "0.1.0"
edition = "2024"
authors = ["Sidney Cammeresi <sac@cheesecake.org>"]
license = "BSD-3-Clause"
readme = "README.md"
description = "Parsing of Amateur Data Interchange Format (ADIF) files"
repository = "https://github.com/cammeresi/adif.git"
keywords = ["hamradio"]
categories = ["encoding", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]
# nightly = []

[dependencies]
bytes = "1"
chrono = "0.4.42"
futures = "0.3"
indexmap = "2"
itoa = "1"
rust_decimal = "1.39"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio"] }
proptest = "1"
rust_decimal = { version = "1.39", features = ["proptest"] }
tokio = { version = "1.48.0", features = ["macros", "rt", "fs"] }
tokio-test = "0.4"

[[bench]]
name = "parse"
harness = false
